--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,198 @@
-Flask==2.3.3
-Flask-CORS==4.0.0
-Flask-JWT-Extended==4.5.2
-psycopg2-binary==2.9.7
+aiodns==3.2.0
+aiohappyeyeballs==2.4.0
+aiohttp==3.10.5
+aiosignal==1.3.1
+alembic==1.15.2
+altair==5.2.0
+anyio==3.7.1
+appnope==0.1.4
+APScheduler==3.9.1.post1
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==2.4.1
+async-lru==2.0.4
+attrs==23.2.0
+Babel==2.14.0
 bcrypt==4.0.1
-python-dotenv==1.0.0
-marshmallow==3.20.1
+beautifulsoup4==4.12.3
+bidict==0.23.1
+binance-connector==3.5.1
+bleach==6.1.0
+blinker==1.9.0
+boto3==1.38.35
+botocore==1.38.35
+cachelib==0.13.0
+cachetools==5.0.0
+ccxt==4.3.90
+certifi==2025.1.31
+cffi==1.16.0
+charset-normalizer==3.4.1
+click==8.1.8
+comm==0.2.1
+contourpy==1.2.0
+cryptography==42.0.2
+cycler==0.12.1
+dateparser==1.2.1
+debugpy==1.8.0
+decorator==5.1.1
+defusedxml==0.7.1
+Deprecated==1.2.18
+distlib==0.3.8
+distro==1.9.0
+dlib==19.24.6
+dnspython==2.7.0
+eventlet==0.39.1
+executing==2.0.1
+face-recognition==1.3.0
+face_recognition_models==0.3.0
+fastjsonschema==2.19.1
+filelock==3.13.1
+Flask==2.3.3
+Flask-Cors==4.0.0
+Flask-JWT-Extended==4.5.2
 Flask-Limiter==3.5.0
-Werkzeug==2.3.7 
-requests
+Flask-Mail==0.9.1
+Flask-Migrate==4.0.5
+Flask-Session==0.8.0
+Flask-SocketIO==5.3.6
+Flask-SQLAlchemy==3.1.1
+fonttools==4.47.2
+fqdn==1.5.1
+frozenlist==1.4.1
+gate-api==6.96.0
+gitdb==4.0.11
+GitPython==3.1.41
+greenlet==3.1.1
+gunicorn==23.0.0
+h11==0.14.0
+httpcore==1.0.2
+httpx==0.25.2
+idna==3.10
+importlib-metadata==7.0.1
+ipykernel==6.29.1
+ipython==8.21.0
+isoduration==20.11.0
+itsdangerous==2.2.0
+jedi==0.19.1
+Jinja2==3.1.6
+jmespath==1.0.1
+json5==0.9.14
+jsonpointer==2.4
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+jupyter-events==0.9.0
+jupyter-lsp==2.2.2
+jupyter_client==8.6.0
+jupyter_core==5.7.1
+jupyter_server==2.12.5
+jupyter_server_terminals==0.5.2
+jupyterlab==4.1.0
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.25.2
+kiwisolver==1.4.5
+limits==5.2.0
+Mako==1.3.10
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.20.1
+matplotlib==3.8.2
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+mexc-api==0.0.2
+mexc-sdk==0.0.1
+mistune==3.0.2
+msgspec==0.19.0
+multidict==6.0.5
+nbclient==0.9.0
+nbconvert==7.16.0
+nbformat==5.9.2
+nest-asyncio==1.6.0
+notebook_shim==0.2.3
+numpy==1.26.3
 openai==1.12.0
-flask-mail==0.9.1
-secrets
+ordered-set==4.1.0
+overrides==7.7.0
+packaging==23.2
+pandas==2.2.0
+pandocfilters==1.5.1
+parso==0.8.3
+pexpect==4.9.0
+pillow==10.2.0
+platformdirs==4.1.0
+prometheus-client==0.19.0
+prompt-toolkit==3.0.43
+protobuf==4.25.2
+psutil==5.9.8
+psycopg2-binary==2.9.7
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==15.0.0
+pycares==4.4.0
+pycparser==2.21
+pycryptodome==3.22.0
+pydantic==1.10.14
+pydeck==0.8.1b0
+Pygments==2.17.2
+PyJWT==2.10.1
+pyparsing==3.1.1
+PyPDF2==3.0.1
+python-binance==1.0.28
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.0
+python-engineio==4.11.2
+python-json-logger==2.0.7
+python-socketio==5.11.1
+python-telegram-bot==20.7
+python-telegram-bot-raw==20.6
+pytz==2025.2
+PyYAML==6.0.1
+pyzmq==25.1.2
+referencing==0.33.0
+regex==2024.11.6
+requests==2.31.0
+rfc3339-validator==0.1.4
+rfc3986==1.5.0
+rfc3986-validator==0.1.1
+rich==13.7.0
+rpds-py==0.17.1
+s3transfer==0.13.0
+Send2Trash==1.8.2
+setuptools==68.2.2
+simple-websocket==1.1.0
+six==1.17.0
+smmap==5.0.1
+sniffio==1.3.0
+somepackage==1.2.3
+soupsieve==2.5
+SQLAlchemy==2.0.25
+stack-data==0.6.3
+streamlit==1.30.0
+telegram==0.0.1
+tenacity==8.2.3
+terminado==0.18.0
+tinycss2==1.2.1
+toml==0.10.2
+toolz==0.12.1
+tornado==6.3.3
+tqdm==4.66.1
+traitlets==5.14.1
+types-python-dateutil==2.8.19.20240106
+typing_extensions==4.13.2
+tzdata==2023.4
+tzlocal==5.2
+uri-template==1.3.0
+urllib3==2.3.0
+validators==0.22.0
+virtualenv==20.25.0
+wcwidth==0.2.13
+webcolors==1.13
+webencodings==0.5.1
+websocket-client==1.7.0
+websockets==15.0.1
+Werkzeug==2.3.7
+wrapt==1.17.2
+wsproto==1.2.0
+xlrd==2.0.1
+yarl==1.9.4
+zipp==3.17.0
